--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的 GitHub Pages 网站</title>
+    <title>汉字大师（EZ Chinese）</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>欢迎来到我的网站</h1>
+        <h1>欢迎使用汉字大师App。</h1>
         <nav>
             <ul>
                 <li><a href="index.html" class="active">首页</a></li>
-                <li><a href="about.html">关于我</a></li>
-                <li><a href="projects.html">我的项目</a></li>
+                <li><a href="about.html">关于作者</a></li>
+                <li><a href="projects.html">汉字大师APP</a></li>
                 <li><a href="contact.html">联系我</a></li>
             </ul>
         </nav>
@@ -22,13 +22,12 @@
     <main>
         <section>
             <h2>首页内容</h2>
-            <p>这是我的 GitHub Pages 网站首页。使用上方导航可以访问其他页面。</p>
-            <p>GitHub Pages 是一个免费的静态网站托管服务，非常适合展示个人项目或创建个人博客。</p>
+            <p>使用上方导航可以访问其他页面，获取最新App动态，以及获取帮助信息。</p>
         </section>
     </main>
     
     <footer>
-        <p>&copy; 2025 我的网站 | 托管于 GitHub Pages</p>
+        <p>&copy; 2025 汉字大师 | 支持微信号：174865717 </p>
     </footer>
 </body>
 </html>
