--- a/projects.html
+++ b/projects.html
@@ -11,9 +11,9 @@
         <h1>欢迎使用汉字大师（EZ Chinese）</h1>
         <nav>
             <ul>
-                <li><a href="index.html" class="active">首页</a></li>
+                <li><a href="index.html">首页</a></li>
                 <li><a href="about.html">关于作者</a></li>
-                <li><a href="projects.html">汉字大师APP</a></li>
+                <li><a href="projects.html"  class="active">汉字大师APP</a></li>
                 <li><a href="contact.html">联系我</a></li>
             </ul>
         </nav>
