--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
     <header>
         <h1>欢迎来到我的网站</h1>
         <nav>
-            <ul>
+                <ul>
                 <li><a href="index.html">首页</a></li>
-                <li><a href="about.html" class="active">关于我</a></li>
-                <li><a href="projects.html">我的项目</a></li>
+                <li><a href="about.html" class="active">关于作者</a></li>
+                <li><a href="projects.html">汉字大师APP</a></li>
                 <li><a href="contact.html">联系我</a></li>
             </ul>
         </nav>
@@ -23,13 +23,12 @@
         <section>
             <h2>关于我</h2>
             <p>你好！我是一名开发者，热爱编程和分享知识。</p>
-            <p>这个网站是通过 GitHub Pages 搭建的，用于展示我的作品和分享我的学习经历。</p>
-            <p>我熟悉的技术包括 HTML、CSS、JavaScript 等前端技术，以及一些后端开发技能。</p>
+            <p>这个网站是通过 GitHub Pages 搭建的，用于展示汉字大师（EZ Chinese）的资料。</p>
         </section>
     </main>
     
     <footer>
-        <p>&copy; 2025 我的网站 | 托管于 GitHub Pages</p>
+        <p>&copy; 2025 汉字大师 | 支持微信号：174865717 </p>
     </footer>
 </body>
 </html>
