--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>关于我 - 我的 GitHub Pages 网站</title>
+    <title>关于我</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
