--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <header>
-        <h1>欢迎来到我的网站</h1>
+        <h1>欢迎使用汉字大师（EZ Chinese）</h1>
         <nav>
             <ul>
                 <li><a href="index.html">首页</a></li>
