--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>欢迎使用汉字大师App。</h1>
+        <h1>欢迎使用汉字大师（EZ Chinese）</h1>
         <nav>
             <ul>
                 <li><a href="index.html" class="active">首页</a></li>
